--- a/animal_data/pheno_csv_files_analysis.Rmd
+++ b/animal_data/pheno_csv_files_analysis.Rmd
@@ -8,17 +8,18 @@ output:
 
 ```{r,message=FALSE,warning=FALSE,results="hide"}
 # Set the working directory to the folder with the data
-source("~/Desktop/repos/motrpac/tools/gcp_functions.R")
+source("~/Desktop/repos/motrpac-bic-norm-qc//tools/gcp_functions.R")
 
 # # official rlease - august 2019:
 # dmaqc_data_dir = "/Users/David/Desktop/MoTrPAC/data/pass_1a/dmaqc_pheno/official/3-Data_Sets/"
 # # dictionary path
 # dmaqc_dict_dir = "/Users/David/Desktop/MoTrPAC/data/pass_1a/dmaqc_pheno/official/1-Data_Dictionary/"
 
-# take it directly from the buckets
+# Take it directly from the buckets
 local_path = "/Users/David/Desktop/MoTrPAC/data/pass_1a/dmaqc_pheno/release_10032019/"
 system(paste("mkdir",local_path))
-bucket = "gs://motrpac-portal-transfer-dmaqc/Official_DMAQC_TRANSFER/20190816_DMAQC_Transfer_PASS_1A.6M_1.00/"
+# bucket = "gs://motrpac-portal-transfer-dmaqc/Official_DMAQC_TRANSFER/20190816_DMAQC_Transfer_PASS_1A.6M_1.00/"
+bucket = "gs://motrpac-portal-transfer-dmaqc/QC_EXPORT_DMAQC_Transfer_PASS_1A.6M_0.01/"
 dmaqc_data_dir = paste(local_path,"3-Data_Sets/",sep="")
 # dictionary path
 dmaqc_dict_dir = paste(local_path,"1-Data_Dictionary/",sep="")
@@ -327,7 +328,6 @@ for(currname in formnames){
   merged_column_dictionary = rbind(merged_column_dictionary,tmp_dict_data)
 }
 
-
 # Final checks of the data
 dim(merged_dmaqc_data)
 merged_column_dictionary = merged_column_dictionary[is.element(
@@ -335,6 +335,7 @@ merged_column_dictionary = merged_column_dictionary[is.element(
   ),]
 dim(merged_column_dictionary)
 merged_column_dictionary = unique(merged_column_dictionary)
+dim(merged_column_dictionary)
 
 ```
 
@@ -358,20 +359,23 @@ calc_data = read.csv(calc_data_file)
 colnames(calc_data) = tolower(colnames(calc_data))
 rownames(calc_data) = calc_data$labelid
 # Extract the relevant columns from our merged dataset
-cols_for_analysis = c("labelid",
-                      "acute.test.weight","animal.registration.weight",
-                      "acute.test.endblood","acute.test.beginblood",
-                      "specimen.collection.t_edtafill","acute.test.t_complete",
-                      "specimen.collection.t_death","acute.test.t_complete",
-                      "specimen.processing.t_freeze","acute.test.t_complete")
-# table(is.element(cols_for_analysis,set=colnames(merged_dmaqc_data))) # sanity
+cols_for_analysis = list(labelid = "labelid",
+    wgt_gain_before_acute = c("acute.test.weight","animal.registration.weight"),
+    lactate_change_dueto_acute = c("acute.test.endblood","acute.test.beginblood"),
+    edta_coll_time  = c("specimen.collection.t_edtafill","acute.test.t_complete"),
+    # taking the difference between the following intervals is wrong because
+    # t_complete and t_death/t_freeze may be on different days
+    deathtime_after_acute = c("specimen.collection.t_death","acute.test.t_complete"),
+    frozetime_after_acute = c("specimen.processing.t_freeze","acute.test.t_complete"))
 
 # Go over each score and compare the two versions
-for(j in seq(2,length(cols_for_analysis),by=2)){
-  bic_version = unique(merged_dmaqc_data[,cols_for_analysis[c(1,j,j+1)]])
+tp_info = unique(merged_dmaqc_data[,c("labelid","animal.key.anirandgroup")])
+rownames(tp_info) = as.character(tp_info[,1])
+for(dmaqc_col in names(cols_for_analysis)[-1]){
+  our_colls = cols_for_analysis[[dmaqc_col]]
+  bic_version = unique(merged_dmaqc_data[,c("labelid",our_colls)])
   rownames(bic_version) = bic_version[,1]
-  table(is.element(rownames(calc_data),merged_dmaqc_data$labelid))
-  dmaqc_version = calc_data[rownames(bic_version),c(3,3+j/2)]
+  dmaqc_version = calc_data[rownames(bic_version),c("labelid",dmaqc_col)]
   if(mode(bic_version[,2])=="character"){
     bic_version_score = as.difftime(bic_version[,2])-as.difftime(bic_version[,3])
     bic_version_score = as.numeric(bic_version_score)*60*60
@@ -379,10 +383,15 @@ for(j in seq(2,length(cols_for_analysis),by=2)){
   else{
     bic_version_score = bic_version[,2]-bic_version[,3]
   }
-  plot(bic_version_score,dmaqc_version[,2],pch=20,cex=1.2,col="blue",
+  names(bic_version_score) = rownames(bic_version)
+
+  plot(x=bic_version_score,y=dmaqc_version[,2],pch=20,cex=1.2,col="blue",
        xlab="BICs computation",ylab="DMAQC computation",
        main = colnames(dmaqc_version)[2])
   abline(0,1,lty=2)
+  boxplot(bic_version_score~tp_info[names(bic_version_score),2],
+          ylab = "",xlab="",
+          main = colnames(dmaqc_version)[2],las=2,mar=c(10,5,5,5))
 }
 
 print("Now go over the columns, but this time take our version from the merged data")
@@ -425,6 +434,17 @@ merged_dmaqc_data$animal.key.is_control = grepl("control",
 merged_dmaqc_data$acute.test.howlongshock_seconds = sapply(
   merged_dmaqc_data$acute.test.howlongshock,
   parse_shocktime)
+
+# Add the parsed shock time into the dictionary
+merged_column_dictionary = rbind(merged_column_dictionary,
+  c("acute.test.howlongshock_seconds",
+    " how much time was spent on the shocker grid in seconds",
+    "numeric","","",
+    min(merged_dmaqc_data$acute.test.howlongshock_second,na.rm=T),
+    max(merged_dmaqc_data$acute.test.howlongshock_second,na.rm=T),
+    "calculated.variables")
+)
+
 inds = !is.na(merged_dmaqc_data$acute.test.howlongshock_seconds)
 df = merged_dmaqc_data[inds,c("bid","acute.test.distance",
                               "acute.test.howlongshock_seconds",
@@ -644,7 +664,7 @@ abline(h = 2,lwd=2,col="red",lty=2)
 # Save the merged datasets in the cloud
 
 ```{r}
-# Solve some formatting issues
+# Solve some formatting issues and columns that are redundant or wrong
 merged_column_dictionary = as.matrix(merged_column_dictionary)
 # All NAs are ""
 merged_column_dictionary[is.na(merged_column_dictionary)] = ""
@@ -656,6 +676,15 @@ merged_column_dictionary = rbind(
     "varchar",NA,NA,NA,NA,""),
   merged_column_dictionary
 )
+# remove: deathtime_after_acute and and frozetime_after_acute
+ind1 = which(grepl("deathtime_after_acute",merged_column_dictionary[,1]))
+ind2 = which(grepl("deathtime_after_acute",colnames(merged_dmaqc_data)))
+merged_column_dictionary = merged_column_dictionary[-ind1,]
+merged_dmaqc_data = merged_dmaqc_data[,-ind2]
+ind1 = which(grepl("frozetime_after_acute",merged_column_dictionary[,1]))
+ind2 = which(grepl("frozetime_after_acute",colnames(merged_dmaqc_data)))
+merged_column_dictionary = merged_column_dictionary[-ind1,]
+merged_dmaqc_data = merged_dmaqc_data[,-ind2]
 
 # To see the bucket list
 # gsutil ls -p motrpac-portal-dev
